# GemmaHackathon-UtiBot

./: .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  README.md  SETUP.md  app.py  pyproject.toml  requirements.txt
agents/: __init__.py  coordinator_agent.py  document_agent.py  navigation_agent.py  verification_agent.py
browser/: __init__.py  action_executor.py  page_observer.py  playwright_controller.py
config/: __init__.py  provider_registry.yaml  settings.py
database/: __init__.py  connection.py  orm_models.py  repositories.py
ingestion/: __init__.py  duplicate_detector.py  pdf_extractor.py  text_cleaner.py  zip_handler.py
mock_providers/: __init__.py  electric_provider.py  gas_provider.py  shared.py  water_provider.py
models/: __init__.py  bill.py  browser.py  payment.py  workflow.py
scripts/: check_ollama.py  initialize_db.py  run_mock_providers.py  run_web.py  verify_setup.py
services/: __init__.py  agent_steps.py  approval_gate.py  audit_service.py  chat_history.py  data_cleanup.py  date_utils.py  document_agent.py  folder_navigator.py  gemma_client.py  payment_service.py  provider_service.py  run_registry.py  task_planner.py  url_extractor.py  validation_service.py
tests/: test_approval_gate.py  test_chat_history.py  test_data_cleanup.py  test_date_utils.py  test_document_agent_vision.py  test_duplicate_detector.py  test_folder_navigator.py  test_payment_workflow.py  test_pdf_extractor.py  test_provider_service.py  test_task_planner.py  test_url_extractor.py  test_validation.py  test_zip_handler.py
web/: server.py
web/static/js/: app.js
(+6 files in other folders)
